Fix dropout element and z-index
Now full screen tools is auto size and auto position

--- a/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
+++ b/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
@@ -229,18 +229,22 @@ i.icon:hover
     padding-top: 15px
 
 .tools
-    width: 310px
-    height: 50px
-    background-color: #f1f1f1
+    padding: 0 10px
+    min-height: 50px
     position: absolute
-    left: 40%
+    width: fit-content
+    background-color: #f1f1f1
+    margin-left: auto
+    margin-right: auto
+    left: 0
+    right: 0
     bottom: 15%
     display: none
     border-radius: 4px
     box-shadow: 0px 0px 3px grey
     opacity: 0.7
     text-align: center
-    z-index: 10
+    z-index: 1100
 
 .tools:active
     opacity: 1
